--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-loader-spinner": "^6.1.6",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.14.1",
     "react-webcam": "^7.2.0",
     "reactjs-popup": "^2.0.6",
     "socket.io-client": "^4.8.0",
