--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,21 +1,21 @@
 {
-  "short_name": "React App",
-  "name": "Create React App Sample",
+  "short_name": "Quotidian",
+  "name": "Quotidian Web App",
   "icons": [
     {
-      "src": "favicon.ico",
+      "src": "https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png",
       "sizes": "64x64 32x32 24x24 16x16",
-      "type": "image/x-icon"
+      "type": "image/png"
     },
     {
-      "src": "logo192.png",
-      "type": "image/png",
-      "sizes": "192x192"
+      "src": "https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png",
+      "sizes": "192x192",
+      "type": "image/png"
     },
     {
-      "src": "logo512.png",
-      "type": "image/png",
-      "sizes": "512x512"
+      "src": "https://res.cloudinary.com/dx97khgxd/image/upload/v1730437919/Screenshot_2024_1026_100527-removebg-preview_h9ami8.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "start_url": ".",
